[FIX] Thread message icon overlapping text (#16083)

--- a/app/theme/client/imports/general/base_old.css
+++ b/app/theme/client/imports/general/base_old.css
@@ -4843,6 +4843,14 @@ rc-old select,
 	& .user.user-card-message {
 		margin-left: -5px;
 	}
+
+	& .thread-icons--thread {
+		position: relative;
+
+		left: 0;
+
+		margin: 0 3px;
+	}
 }
 
 .rc-old .messages-box:not(.compact) .hide-avatars .message.sequential .info {
